Fix alignment issues of subtext

--- a/style.css
+++ b/style.css
@@ -91,11 +91,10 @@ button {
 
 .info-card {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 10px;
     max-width: 150px;
+    flex-wrap: wrap;
 }
 
 .card-image {
@@ -105,7 +104,6 @@ button {
     width: 150px;
 }
 
-.card-text {
-    flex-wrap: wrap;
-    align-self: center;
+.info-card p {
+    text-align: center;
 }
